@@ -53,7 +53,10 @@ var Fb2ePubConverter = {
 	},	 
 	//need to close the library once we're finished with it
     close: function() {
-        this.lib.close();
-		this.lib = null;
+		if ( this.lib != null )
+		{
+			this.lib.close();
+			this.lib = null;
+		}
     }
 };
